# steno

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.h  dict.json  rules.mk  steno.c  steno.h
compiler/: Cargo.toml  README.md  simple-rules.json
compiler/src/: bar.rs  compile.rs  dict.rs  flash.rs  freemap.rs  hash.rs  hashmap.rs  keycode.lalrpop  keycode.rs  main.rs  orthography.rs  rule.rs  stroke.rs
compiler/src/dict/: entry.lalrpop  entry.rs  keycode.rs  mod.rs  parse.rs
firmware/: .clang-format  CMakeLists.txt  Kconfig  README.md  config.h  disp.h  freemap.c  ghostfat.c  hist.c  hist.h  orthography.c  scsi.c  steno.c  steno.h  stroke.c  stroke.h
keymaps/default/: config.h  keymap.c  session.vim
ortho-veri/: Cargo.toml  build.rs  english.regex.fix.json
ortho-veri/src/: hw_mock.rs  main.rs  regex_gen.rs  rules.c  types.rs
pcb/: README.md
pcb/Gerber/: mobile-steno-B_Cu.gbr  mobile-steno-B_Mask.gbr  mobile-steno-B_SilkS.gbr  mobile-steno-Edge_Cuts.gbr  mobile-steno-F_Cu.gbr  mobile-steno-F_Mask.gbr  mobile-steno-F_SilkS.gbr  mobile-steno-NPTH.drl  mobile-steno-PTH.drl  steno-B_Cu.gbr  steno-B_Mask.gbr  steno-B_SilkS.gbr  steno-Edge_Cuts.gbr  steno-F_Cu.gbr  steno-F_Mask.gbr  steno-F_SilkS.gbr  steno-NPTH.drl  steno-PTH.drl  steno-v2-B_Cu.gbr  steno-v2-B_Mask.gbr  steno-v2-B_SilkS.gbr  steno-v2-Edge_Cuts.gbr  steno-v2-F_Cu.gbr  (+4 more)
qmk/: .clang-format  CMakeLists.txt  Kconfig  README.md  config.h  config.mk  dict_editing.c  dict_editing.h  disp.h  flash.c  flash.h  flog.c  flog.h  format.h  freemap.c  ghostfat.c  hist.c  hist.h  lcd.c  lcd.h  lcd_font.c  mregexp.h  ortho_test.c  ortho_test_data.c  orthography.c  orthography.goto  orthography.h  pin_assign.h  qmk  rules.mk  scsi.c  scsi.h  spi.c  spi.h  steno.c  steno.h  store.h  stroke.c  stroke.h
sd-reader_source_20120612/: fat.c  fat.h  sd_raw.c  sd_raw.h  sd_raw_config.h
sdcard/: fat.c  fat.h  fat_config.h  main.c  partition.c  partition.h  sd_raw.c  sd_raw_config.h
src/: compile.rs  dict.rs  main.rs  stroke.rs
(+144 files in other folders)
