[package]
name = "steno"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
clap = "2.33.2"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
parse_int = "0.4.0"
primes = "0.3.0"
lazy_static = "1.4.0"
bitfield = "0.13.2"
onig = "6.0.0"
indicatif = "0.15.0"
chrono = "0.4.13"
lalrpop-util = "0.19.0"
