[package]
name = "steno"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }

[dependencies]
clap = "2.33.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
parse_int = "0.5.0"
primes = "0.3.0"
lazy_static = "1.4.0"
bitfield = "0.13.2"
onig = "6.1.1"
indicatif = "0.16.0"
chrono = "0.4.19"
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop" }
