[package]
name = "steno"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
lazy_static = "1.4.0"
bitfield = "0.13.2"
onig = "6.1.1"
indicatif = "0.16.0"
chrono = "0.4.19"
nom = "*"
