[package]
name = "ortho-veri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onig = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
indicatif = "*"
clap = "*"
lazy_static = "1"
regex-syntax = "*"

[build-dependencies]
cc = "*"
bindgen = "0.59"

[[bin]]
name = "regex-gen"
path = "src/regex_gen.rs"
